FLUID-4367: Fixing border colours in contrast themes
There were a few things needed to get the border colours to work with
the themes. 1) a couple of the themes were missing the border-color
property for inputs and divs 2) the borders on iframes weren't
considered in the contrast themes, 3) the border-color properties needed
to have !important.  I also added in the missing properties that are
supposed to get !important injection in the generation code.

--- a/src/webapp/framework/fss/css/fss-theme-blackYellow.css
+++ b/src/webapp/framework/fss/css/fss-theme-blackYellow.css
@@ -15,6 +15,9 @@
 /* Divs, inputs */
 .fl-theme-blackYellow div, .fl-theme-blackYellow input {color:#000000; background-color:#ffff00; border-color:#000;}
 
+/* iframes */
+.fl-theme-blackYellow iframe {border-color:#000;}
+
 /* Links */
 .fl-theme-blackYellow a  {color: #000; font-weight:bold; background-color:#ff0;}
 
